cta and about us

--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,6 @@
   --main-yellow: #ffb577;
   --playfair: "Playfair Display", serif;
   --poppins: "Poppins", sans-serif;
+  --secondary-gray: #302d32;
+  --main-gray: #19161b;
 }
